deploy: 08252a90b2db3c1a34bbdeaac2fc36d3548dd635

--- a/intro.html
+++ b/intro.html
@@ -532,6 +532,7 @@ title="Print to PDF"
 <li><p>Further remarks, what to improve, what I would do differently…</p></li>
 <li><p>Summary of demos, tests, PRs and GH issues</p></li>
 <li><p>Improve ipynb of demos: add title to mesh files, add visualization for waveguide demo and axis demo, add gifs, check why in Docker PyVista does not work.</p></li>
+<li><p>Use extrude-rotate in pyvista for the axisymmetric plots</p></li>
 </ul>
 </section>
 </section>
