deploy: 6f00dea2a656c43d5e0cc8f10f20a29e429cad8e

--- a/intro.html
+++ b/intro.html
@@ -527,6 +527,7 @@ title="Print to PDF"
 <ul class="simple">
 <li><p>list of PR, with their current status</p></li>
 <li><p>list of GH issue, with their current status</p></li>
+<li><p>paraview animation</p></li>
 <li><p>what’s next</p></li>
 <li><p>highlights and challenges</p></li>
 <li><p>Further remarks, what to improve, what I would do differently…</p></li>
