--- a/submission.html
+++ b/submission.html
@@ -266,7 +266,7 @@ title="Source repository"
       </li>
       
       <li>
-        <a href="https://github.com/mikics/gsoc-jupyterbook/issues/new?title=Issue%20on%20page%20%2Fintro.html&body=Your%20issue%20content%20here."
+        <a href="https://github.com/mikics/gsoc-jupyterbook/issues/new?title=Issue%20on%20page%20%2Fsubmission.html&body=Your%20issue%20content%20here."
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -283,7 +283,7 @@ title="Open an issue"
       </li>
       
       <li>
-        <a href="https://github.com/mikics/gsoc-jupyterbook/edit/main/./intro.md"
+        <a href="https://github.com/mikics/gsoc-jupyterbook/edit/main/./submission.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
@@ -311,7 +311,7 @@ title="Edit this page"
   <div class="menu-dropdown__content">
     <ul>
       <li>
-        <a href="_sources/intro.md"
+        <a href="_sources/submission.md"
    class="headerbtn"
    data-toggle="tooltip"
 data-placement="left"
