deploy: 7c89df3b6e697a8635fc57311bfd2cdac3226777

--- a/submission.html
+++ b/submission.html
@@ -1646,7 +1646,7 @@ amazing journey!</p>
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./."
         },
         predefinedOutput: true
